adding the if statement that only number inputted can access the program and adds stylesheet for styling tha pages

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
       <div class="jumbotron">
         <h1>Ping Pong</h1>
       </div>
+      <h3><strong>Rules</strong></h3>
+      <p>Ping Pong games will print out your number, with expception: </p>
+      <ul>
+        <li>Number divisible by 3, will become "Ping"</li>
+        <li>Number divisible by 5, will become "Pong"</li>
+        <li>Number divisible by 15, will become "Ping-Pong"</li>
+      </ul>
+      <br>
       <form id="formOne">
         <div class="form-group">
           <label for="input">Please enter a number: </label>
@@ -22,7 +30,8 @@
       </form>
       <div id="result">
         <div class="box">
-          <h4> </h4>
+          <ul>
+          </ul>
         </div>
       </div>
     </div>
