finalize the pages by finishing specs 5, styles, and program addition

--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
         </div>
         <button type="submit" class="btn btn-danger">Submit</button>
       </form>
-      <div id="result">
+      <div class = "result">
+        <p>A number of <span id = "value"></span> consists the value of: </p>
+        <ul>
+          <li><span id = "ping"></span> of Ping.</li>
+          <li><span id = "pong"></span> of Pong.</li>
+          <li><span id = "pingpong"></span> of Ping-Pong.</li>
         <div class="box">
-          <ul>
+          <ul id = "result">
           </ul>
         </div>
       </div>
